# cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.org  conanfile.txt  tasks.py  vcpkg.json
.github/template/: README.md  template_repository
.github/workflows/: CI.yml  auto-clang-format.yml
configured_files/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  main.cpp
src/myproject/: CMakeLists.txt  myproject.cpp  myproject1_impl.cpp  myproject1_impl.h
src/myproject/include/myproject/: myproject.h
test/: CMakeLists.txt  catch_main.cpp  tests.cpp
